@@ -3,16 +3,15 @@ package com.telifie.Models.Clients;
 import com.mongodb.client.model.UpdateOptions;
 import com.telifie.Models.Actions.Event;
 import com.telifie.Models.Actions.Timeline;
-import com.telifie.Models.Domain;
 import com.telifie.Models.Utilities.Configuration;
 import org.bson.Document;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class TimelinesClient extends Client {
 
     public TimelinesClient(Configuration config){
-
         super(config);
         super.collection = "timelines";
     }
@@ -20,7 +19,7 @@ public class TimelinesClient extends Client {
     public boolean addEvents(String object, ArrayList<Event> events){
         return this.updateOne(
                 new Document("$and",
-                        Arrays.asList(
+                        List.of(
                                 new Document("object", object)
                         )
                 ),
